--- a/jenkinsfile.yaml
+++ b/jenkinsfile.yaml
@@ -1,6 +1,7 @@
 pipeline:
     agent:
-        none:
+        node:
+            label: 'JENKINS-NODE'
     stages:
     - stage: "Teste"
       steps:
